<resources>
    <string name="app_name">Tatsu</string>

    <!-- App Guide -->
    <string name="guide_title_1">Simple Pomodoro Timer</string>
    <string name="guide_description_1">Manage your with simple timer. Set work repetitions, Take short breaks!</string>
    <string name="guide_title_2">Keep track of Productivity</string>
    <string name="guide_description_2">Track your productive time &amp; break times with simple statistics!</string>
    <string name="guide_title_3">Keep the Distractions Away</string>
    <string name="guide_description_3">Turn on Silent Mode to mute all notifications when you are working!</string>

    <!-- Menu Titles -->
    <string name="title_stats">Stats</string>
    <string name="title_timer">Timer</string>
    <string name="title_settings">Settings</string>

    <!-- Timer Screen -->
    <string name="chip_label_timer_type_work">Work In Progress</string>
    <string name="chip_label_timer_type_break">Break Time</string>
    <string name="chip_label_start_work">Start Work</string>

    <string name="timer_placeholder">00:00</string>
    <string name="timer_hour_minutes">Hours : Minutes</string>

    <string name="label_short_hours">H</string>
    <string name="label_short_minutes">M</string>
    <string name="label_short_seconds">S</string>
    <string name="start_timer">Start Timer</string>

    <!-- Work Timer Finish Dialog -->
    <string name="work_timer_finish_title">Congrats! One sitting is complete!</string>
    <string name="work_timer_finish_text">Now that you have worked for a good amount of time, go out and have a stretch!</string>
    <string name="work_timer_finish_sub_text">@string/empty</string>
    <string name="work_timer_finish_button_start_break">Start break</string>
    <string name="work_timer_finish_button_cancel">No, I want free time</string>

    <!-- Work Timer Finish Dialog -->
    <string name="break_timer_finish_title">Chop Chop!</string>
    <string name="break_timer_finish_text">Time to go back to work now!</string>
    <string name="break_timer_finish_sub_text">@string/empty</string>
    <string name="break_timer_finish_button_start_work">Start Work</string>
    <string name="break_timer_finish_button_cancel">No, I want free time</string>

    <!-- Settings Screen -->
    <string name="settings_timer_title">Timer</string>
    <string name="settings_timer_work_title">Work Duration</string>
    <string name="settings_timer_break_title">Break Duration</string>

    <string name="settings_work_hours_title">Work Hours</string>
    <string name="settings_work_hours_pref_title">Daily reminders</string>
    <string name="settings_work_hours_start_title">Start my work at</string>
    <string name="settings_work_hours_finish_title">Finish my work at</string>

    <string name="settings_silent_mode_title">Silent Mode</string>
    <string name="settings_silent_mode_pref_title">Turn on silent mode during work</string>

    <string name="settings_about_title">About</string>
    <string name="settings_feedback_title">Feedback</string>

    <string name="time_format_am">%1$d:%2$02d AM</string>
    <string name="time_format_pm">%1$d:%2$02d PM</string>

    <string name="intValue">%1$d</string>

    <plurals name="duration_format_hours">
        <item quantity="zero">@string/empty</item>
        <item quantity="one">%d Hour</item>
        <item quantity="other">%d Hours</item>
    </plurals>

    <plurals name="duration_format_minutes">
        <item quantity="zero">@string/empty</item>
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>

    <!-- Stats Screen -->
    <string name="stats_today">Today\'s Stats</string>
    <string name="stats_last_week">Last Week\'s Stats</string>
    <string name="stats_time_format">%1$s, %2$s to %3$s</string>
    <string name="label_today">Today</string>
    <string name="label_sessions">Sessions</string>
    <string name="label_last_week">Last Week</string>
    <string name="label_over_the_month">Over the Month</string>
    <string name="label_sessions_per_day">Sessions per Day</string>
    <string name="label_over_the_year">Over the Year</string>
    <string name="label_sessions_per_week">Sessions per Week</string>
    <string name="label_no_data_available">No Data Available</string>
    <string name="label_no_stats_available">Statistics will be available once enough sessions are completed</string>

    <!-- Common -->
    <string name="empty" translatable="false" />

    <!-- Notification Channel -->
    <string name="timer_channel_id" translatable="false">default</string>
    <string name="timer_channel_name">Timer</string>
    <string name="timer_channel_description">Shows notifications for running timers.</string>

    <!-- Notification Channel: Work Times -->
    <string name="work_hours_channel_id" translatable="false">work_hours</string>
    <string name="work_hours_channel_name">Work Hours</string>
    <string name="work_hours_channel_description">Shows notifications as reminder for starting and ending work.</string>

    <!-- Notifications -->
    <string name="timer_notification_title">Timer %s</string>
    <string name="timer_notification_title_work">Work Timer Running</string>
    <string name="timer_notification_title_break">Break Timer Running</string>
    <string name="timer_notification_message_running">Remaining time: %1$d:%2$d:%3$d</string>
    <string name="timer_notification_message_work_paused">Work Timer Paused</string>
    <string name="timer_notification_message_break_paused">Break Timer Paused</string>
    <string name="work_hours_start_notification_title">Time to start work!</string>
    <string name="work_hours_start_notification_message">Start work with a cheerful mood!</string>
    <string name="work_hours_end_notification_title">Good work!</string>
    <string name="work_hours_end_notification_message">Time to relax and enjoy rest of the day!</string>
    <string name="action_resume">Resume</string>
    <string name="action_pause">Pause</string>
    <string name="action_stop">Stop</string>

    <!-- Sentiments -->
    <string name="feedback_welcome_text">How are you feeling?</string>
    <string name="feedback_hint">Message</string>
    <string name="send">Send</string>

    <string name="title_version">Version</string>
    <string name="licences">Licences</string>

    <!-- Licences -->
    <string name="licence_timber">
Copyright 2013 Jake Wharton
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n\n
   http://www.apache.org/licenses/LICENSE-2.0
\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
</resources>
