<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_hour"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="text_digit_hours,text_label_hours" />

        <TextView
            android:id="@+id/text_digit_hours"
            style="@style/TimerDigitStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/text_label_hours"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00" />

        <TextView
            android:id="@+id/text_label_hours"
            style="@style/TimerLabelStyle"
            android:text="@string/label_short_hours"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_digit_hours"
            app:layout_constraintEnd_toStartOf="@+id/text_digit_minutes"
            app:layout_constraintStart_toEndOf="@+id/text_digit_hours" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_minutes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="text_digit_minutes,text_label_minutes" />

        <TextView
            android:id="@+id/text_digit_minutes"
            style="@style/TimerDigitStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_label_minutes"
            app:layout_constraintStart_toEndOf="@+id/text_label_hours"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00" />

        <TextView
            android:id="@+id/text_label_minutes"
            style="@style/TimerLabelStyle"
            android:text="@string/label_short_minutes"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_digit_minutes"
            app:layout_constraintEnd_toStartOf="@+id/text_digit_seconds"
            app:layout_constraintStart_toEndOf="@+id/text_digit_minutes" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_seconds"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="text_digit_seconds,text_label_seconds" />

        <TextView
            android:id="@+id/text_digit_seconds"
            style="@style/TimerDigitStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_label_seconds"
            app:layout_constraintStart_toEndOf="@+id/text_label_minutes"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00" />

        <TextView
            android:id="@+id/text_label_seconds"
            style="@style/TimerLabelStyle"
            android:text="@string/label_short_seconds"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_digit_seconds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_digit_seconds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>