<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.screen.main.stats.StatsFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewState"
            type="org.rionlabs.tatsu.ui.screen.main.stats.StatsViewState" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="8dp">

            <androidx.constraintlayout.widget.Group
                android:id="@+id/metaDataGroup"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{viewState.metaDataAvailable ? View.VISIBLE : View.GONE }"
                app:constraint_referenced_ids="todayCard,lastWeekCard" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/todayCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toTopOf="@id/headerBarrier"
                app:layout_constraintEnd_toStartOf="@id/lastWeekCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/label_today"
                        android:textAppearance="?textAppearanceHeadline5" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/intValue(viewState.sessionsToday)}"
                        android:textAppearance="?textAppearanceHeadline3"
                        app:fontFamily="@font/source_code_pro"
                        tools:text="8" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/label_sessions" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?textAppearanceSubtitle1"
                        app:durationMinutes="@{viewState.minutesToday}"
                        tools:text="4 Hours" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/lastWeekCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toTopOf="@id/headerBarrier"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/todayCard"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/label_last_week"
                        android:textAppearance="?textAppearanceHeadline5" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/intValue(viewState.sessionsThisWeek)}"
                        android:textAppearance="?textAppearanceHeadline3"
                        app:fontFamily="@font/source_code_pro"
                        tools:text="127" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/label_sessions" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?textAppearanceSubtitle1"
                        app:durationMinutes="@{viewState.minutesThisWeek}"
                        tools:text="63 Hours" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/headerBarrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="todayCard,lastWeekCard" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/detailedStatsGroup"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{viewState.statsAvailable ? View.VISIBLE : View.GONE }"
                app:constraint_referenced_ids="overMonthCard,overYearCard" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/overMonthCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toTopOf="@id/overYearCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerBarrier">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/label_over_the_month"
                        android:textAppearance="?textAppearanceHeadline6" />

                    <com.github.mikephil.charting.charts.BarChart
                        android:id="@+id/monthlyChart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/chart_min_height" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/label_sessions_per_day" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/overYearCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overMonthCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/label_over_the_year"
                        android:textAppearance="?textAppearanceHeadline6" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/yearlyChart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/chart_min_height" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/label_sessions_per_week" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/noStatsGroup"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{(viewState.metaDataAvailable &amp;&amp; !viewState.statsAvailable) ? View.VISIBLE : View.GONE }"
                app:constraint_referenced_ids="noStatsImage,noStatsText"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/noStatsImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:alpha="0.6"
                android:contentDescription="@null"
                android:src="@drawable/undraw_report"
                app:layout_constraintBottom_toTopOf="@id/noStatsText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headerBarrier"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/noStatsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:alpha="0.8"
                android:gravity="center"
                android:text="@string/label_no_stats_available"
                android:textAppearance="?textAppearanceSubtitle1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noStatsImage" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/noDataGroup"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="@{(viewState.metaDataAvailable || viewState.statsAvailable) ? View.GONE : View.VISIBLE }"
                app:constraint_referenced_ids="noDataImage,noDataText"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/noDataImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:alpha="0.8"
                android:contentDescription="@null"
                android:src="@drawable/undraw_no_data"
                app:layout_constraintBottom_toTopOf="@id/noDataText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/noDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:alpha="0.8"
                android:text="@string/label_no_data_available"
                android:textAppearance="?textAppearanceSubtitle1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/noDataImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>